--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = [ "macro" ]
 
 [workspace.package]
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = [ "Frand <frand.nano@gmail.com>" ]
 repository = "https://github.com/frand-nano/frand-node"
@@ -16,3 +16,8 @@ edition.workspace = true
 
 [dependencies]
 frand-node-macro = { path = "macro" }
+log = "0.4"
+anyhow = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+crossbeam = "0.8"
+ciborium = "0.2"
