--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 crossbeam = "0.8"
 ciborium = "0.2"
+
+[dev-dependencies]
+simplelog = "0.12"
