--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,8 @@ serde = { version = "1.0", features = ["derive"] }
 crossbeam = "0.8"
 ciborium = "0.2"
 
+[profile.release]
+debug = true
+
 [dev-dependencies]
 simplelog = "0.12"
