--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,21 +3,26 @@ resolver = "2"
 members = [ "macro" ]
 
 [workspace.package]
-version = "0.1.1"
 edition = "2021"
-authors = [ "Frand <frand.nano@gmail.com>" ]
-repository = "https://github.com/frand-nano/frand-node"
+version = "0.1.1"
+license = "MIT"
+authors = [ "frand-nano <frand.nano@gmail.com>" ]
 
 [package]
-name = "frand-node"
+edition.workspace = true
 version.workspace = true
 authors.workspace = true
-edition.workspace = true
+license.workspace = true
+name = "frand-node"
+readme = "README.md"
+documentation = "https://docs.rs/frand-node"
+repository = "https://https://github.com/frand-nano/frand-node"
+description = "A crate providing serde and message handling tools."
 
 [dependencies]
 frand-node-macro = { path = "macro" }
 log = "0.4"
-anyhow = "1.0"
+anyhow = "1.0" # Re-exported: anyhow::Result 
 serde = { version = "1.0", features = ["derive"] }
 crossbeam = "0.8"
 ciborium = "0.2"
