--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,13 @@ anyhow = "1.0" # Re-exported: anyhow::Result
 serde = { version = "1.0", features = ["derive"] }
 crossbeam = "0.8"
 ciborium = "0.2"
+futures = "0.3"
+tokio = { version = "1.4", features = ["sync", "macros"] }
 
 [profile.release]
 debug = true
 
 [dev-dependencies]
 simplelog = "0.12"
+tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "time", "macros"] }
 eframe = "0.29"
