--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [ "macro" ]
 
 [workspace.package]
 edition = "2021"
-version = "0.1.2"
+version = "0.1.3"
 license = "MIT"
 authors = [ "frand-nano <frand.nano@gmail.com>" ]
 
@@ -19,10 +19,13 @@ documentation = "https://docs.rs/frand-node"
 repository = "https://https://github.com/frand-nano/frand-node"
 description = "A crate providing serde and message handling tools."
 
+[features]
+default = ["tokio_rt"]
+tokio_rt = ["tokio/rt"]
+
 [dependencies]
 frand-node-macro = { path = "macro" }
 log = "0.4"
-anyhow = "1.0" # Re-exported: anyhow::Result 
 serde = { version = "1.0", features = ["derive"] }
 crossbeam = "0.8"
 ciborium = "0.2"
@@ -33,6 +36,7 @@ tokio = { version = "1.4", features = ["sync", "macros"] }
 debug = true
 
 [dev-dependencies]
+anyhow = "1.0"
 simplelog = "0.12"
 tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "time", "macros"] }
 eframe = "0.29"
