--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,8 @@ serde = { version = "1.0", features = ["derive"] }
 crossbeam = "0.8"
 ciborium = "0.2"
 futures = "0.3"
-tokio = { version = "1.4", features = ["sync", "macros"] }
+tokio = { version = "1.4", features = ["sync", "time", "macros"] }
+once_cell = "1.20"
 
 [profile.release]
 debug = true
