--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ ciborium = "0.2"
 futures = "0.3"
 tokio = { version = "1.4", features = ["sync", "time", "macros"] }
 once_cell = "1.20"
+rustc-hash = "2.1"
 
 [profile.release]
 debug = true
