--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [ "macro" ]
 
 [workspace.package]
 edition = "2021"
-version = "0.1.6"
+version = "0.2.0"
 license = "MIT"
 authors = [ "frand-nano <frand.nano@gmail.com>" ]
 
@@ -19,27 +19,18 @@ documentation = "https://docs.rs/frand-node"
 repository = "https://https://github.com/frand-nano/frand-node"
 description = "A crate providing serde and message handling tools."
 
-[features]
-default = ["tokio_rt"]
-tokio_rt = ["tokio/rt"]
-
 [dependencies]
 frand-node-macro = { path = "macro" }
-log = "0.4"
-serde = { version = "1.0", features = ["derive"] }
-crossbeam = "0.8"
-ciborium = "0.2"
-futures = "0.3"
-tokio = { version = "1.4", features = ["sync", "time", "macros"] }
-once_cell = "1.20"
+smallvec = "1.13"
 rustc-hash = "2.1"
-
-[profile.release]
-debug = true
+futures = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+ciborium = "0.2"
+tokio = { version = "1.4", features = ["sync", "time", "macros"] }
 
 [dev-dependencies]
-anyhow = "1.0"
+log = "0.4"
 simplelog = "0.12"
-tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "time", "macros"] }
 eframe = "0.29"
 num = "0.4"
+tokio = { version = "1.4", features = ["rt", "rt-multi-thread"] }
